# gramr

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.docs  Makefile  README.md  RELEASE.md  docker-compose.yml  tarpaulin.toml  vercel.json
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  cli-reference.md  extensions.md  faq.md  installation.md  introduction.md  quick-start.md  requirements.md  troubleshooting.md  wotan.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/commands/: mod.rs  new.rs
gramrup/: Cargo.toml  README.md
gramrup/src/: main.rs
lib/: Cargo.toml  README.md
lib/src/: error.rs  language.rs  lib.rs  project.rs
lib/src/foundry/: detector.rs  mod.rs
lib/src/generators/: abstract_contract.rs  config.rs  contract.rs  generic.rs  interface.rs  library.rs  mod.rs  script.rs  test.rs
lib/src/templates/: mod.rs  solidity.rs  stylus.rs
nothungup/: Cargo.toml  README.md
nothungup/src/: main.rs
public/: install.sh
scripts/: build-all.sh  coverage.sh
website/: index.html  install.sh  style.css  vercel.json
wotan/: Cargo.toml  README.md
wotan/src/: main.rs  wizard.rs
