[workspace]
resolver = "2"
members = [
    "lib",
    "cli", 
    "gramrup",
    "wotan"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pol Vidal <pxlvre.eth>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pxlvre/gramr"

[workspace.dependencies]
# Common dependencies
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
fs_extra = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
which = "6.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
inquire = "0.7"
tempfile = "3.8"