[package]
name = "gramr-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "⚔️ CLI for scaffolding smart contracts with Foundry"
keywords = ["cli", "smart-contracts", "solidity", "ethereum", "foundry"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gramr"
path = "src/main.rs"

[dependencies]
gramr = { path = "../lib" }
clap = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }