[package]
name = "gramrup"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "⚔️ Installer for the Gramr smart contract scaffolding tool"
keywords = ["installer", "smart-contracts", "solidity", "foundry"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[[bin]]
name = "gramrup"
path = "src/main.rs"

[dependencies]
colored = { workspace = true }
which = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }